--- a/train_config_continue.json
+++ b/train_config_continue.json
@@ -1,21 +1,21 @@
 {
-    "pretrain_from_scratch": true,
+    "pretrain_from_scratch": false,
     "pretrain_config_name": "google/byt5-small",
-    "model_name_or_path": "./byT5-Korean-small-32bs-adafactor-1e-2linear-100000steps",
+    "model_name_or_path": "/data/youngjin/projects/t5-family/myt5/modelhf/pytorch_model_init",
 
-    "run_name": "byT5-Korean-small-32bs-adafactor-1e-2linear-100000steps-01/26-01:27",
+    "run_name": "byT5-Korean-small-32bs-1e-3adafactor-50000steps-01/17-19:38",
 
     "do_train": true,
     "do_eval": true,
     "do_predict": true,
-    "output_dir": "./byT5-Korean-small-32bs-adafactor-1e-2linear-100000steps",
+    "output_dir": "./byT5-Korean-small-32bs-1e-3adafactor-50000steps",
     "overwrite_output_dir": true,
 
     "adafactor": true,
     "learning_rate": 1e-2,
-    "lr_scheduler_type": "linear",
+    "lr_scheduler_type": "constant",
     "num_train_epochs": 1,
-    "max_steps": 100000,
+    "max_steps": 50000,
     "warmup_steps": 500,
     "per_device_train_batch_size": 8,
     "gradient_accumulation_steps": 4,
@@ -30,5 +30,5 @@
     "ignore_data_skip": true,
     "seed": 1,
 
-    "fp16": true
+    "fp16": false
 }
