--- a/train_config_deepspeed.json
+++ b/train_config_deepspeed.json
@@ -1,14 +1,15 @@
 {
     "pretrain_from_scratch": true,
     "pretrain_config_name": "google/byt5-small",
-    "model_name_or_path": "./byT5-Korean-small-128bs-adafactor-1e-2linear-100000steps-ds-0126-0251",
+    "model_name_or_path": "./byt5-extra-small-128bs-adafactor-1e-2linear-100000steps-ds-0127-2315",
+    "tokenizer_name": "utf8-extra",
 
-    "run_name": "byT5-Korean-small-128bs-adafactor-1e-2linear-100000steps-ds-0126-0251",
+    "run_name": "byt5-extra-small-128bs-adafactor-1e-2linear-100000steps-ds-0127-2315",
 
     "do_train": true,
     "do_eval": true,
     "do_predict": true,
-    "output_dir": "./byT5-Korean-small-128bs-adafactor-1e-2linear-100000steps-ds-0126-0251",
+    "output_dir": "./byt5-extra-small-128bs-adafactor-1e-2linear-100000steps-ds-0127-2315",
     "overwrite_output_dir": true,
 
     "adafactor": true,
@@ -17,9 +18,9 @@
     "num_train_epochs": 1,
     "max_steps": 100000,
     "warmup_steps": 500,
-    "per_device_train_batch_size": 16,
-    "gradient_accumulation_steps": 2,
-    "per_device_eval_batch_size": 16,
+    "per_device_train_batch_size": 8,
+    "gradient_accumulation_steps": 4,
+    "per_device_eval_batch_size": 8,
     "evaluation_strategy": "steps",
     "logging_steps": 50,
     "eval_steps": 1000,
